add mocks and initial unit test in gtest

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,16 @@
 platform = atmelavr
 board = uno
 framework = arduino
+
+[env:desktop]
+platform = native
+build_flags = 
+	-std=gnu++11 # use installed GNU C++11 compiler.
+	-pthread # found in gtest documentation
+    -Wall # I want the full set of warnings
+lib_deps = 
+	googletest # Will automatically load latest googletest lib
+lib_ignore = 
+    hal # Arduino where the actual hardware is used
+    src # main.cpp as it uses Arduino commands
+lib_compat_mode = off # Must-have for external stuff like gtest!
