--- a/.github/workflows/ci-cmake-gooogletest.yml
+++ b/.github/workflows/ci-cmake-gooogletest.yml
@@ -14,14 +14,14 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Configure CMake
-      run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/build
+      run: cmake -S $GITHUB_WORKSPACE -B ${{runner.workspace}}/test/desktop
 
     - name: Build
-      working-directory: ${{runner.workspace}}/build
+      working-directory: ${{runner.workspace}}/.pio/build/cmake
       run: cmake --build .
 
     - name: Test
-      working-directory: ${{runner.workspace}}/build
+      working-directory: ${{runner.workspace}}/.pio/build/cmake
       run: GTEST_OUTPUT=xml:test-results/ GTEST_COLOR=1 ctest -V
 
     - name: Upload test results
@@ -29,4 +29,4 @@ jobs:
       if: failure()
       with:
         name: test_results_xml
-        path: ${{runner.workspace}}/build/test-results/**/*.xml
+        path: ${{runner.workspace}}/.pio/build/cmake/test-results/**/*.xml
