--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Required by FetchContent_MakeAvailable
 cmake_minimum_required(VERSION 3.14)
-project(unittest)
+project(pio_gtestgmock)
 
 include(FetchContent)
 FetchContent_Declare(
@@ -10,8 +10,8 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(googletest)
 
 set(CMAKE_CXX_STANDARD 11)
-set(TEST_NAME /test/desktop${PROJECT_NAME}_loopInToOut)
-add_executable(${TEST_NAME} pio_gtestgmock_test.cpp)
+set(TEST_NAME ${PROJECT_NAME}_unittest)
+add_executable(${TEST_NAME} pio_gtestgmock_unittest.cpp)
 target_link_libraries(${TEST_NAME} gtest_main)
 
 enable_testing()
